Revert "fix: safari z-index problem"
This reverts commit c72d6ea8794e9c07c16a94baa6c32d9de0eb1ff0.

--- a/packages/webgal/src/Components/Stage/stage.module.scss
+++ b/packages/webgal/src/Components/Stage/stage.module.scss
@@ -3,7 +3,6 @@
   height: 100%;
   position: absolute;
   z-index: 1;
-  transform: translateZ(1px);
   //animation: MainStage_showBgSoftly 100ms forwards;
   opacity: 1;
   overflow: hidden;
