--- a/packages/webgal/src/Components/UI/BottomControlPanel/bottomControlPanel.module.scss
+++ b/packages/webgal/src/Components/UI/BottomControlPanel/bottomControlPanel.module.scss
@@ -8,7 +8,6 @@
   position: absolute;
   bottom: 0.3em;
   z-index: 9;
-  transform: translateZ(9px);
   display: flex;
   flex-flow: row;
   justify-content: center;
